--- a/js_datetime/style.css
+++ b/js_datetime/style.css
@@ -1,28 +1,80 @@
-body{
-    background-color: rgb(79, 79, 250);
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.wrap-height {
+    height: 100%;
+}
+
+body {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+main {
+    background-color: #0187c4;
+    height: 100vh;
+}
+
+.content-section {
+    height: 100%;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     color: #fff;
-    font-size: 20px;
-    text-align: center;
-    margin:20px;
+    height: 100%;
 }
 
-#lblGreetings{
-    font-size: 70px;
-
-}
-
-hr{
-    width: 11%;
+hr {
+    width: 50px;
     height: 10px;
-    color: #fff;
+    align-self: center;
     background-color: #fff;
 }
 
-#time{
-    font-size: 120px;
-    font-weight: 700;
+.greeting {
+    font-size: 2rem;
+    align-self: center;
+    margin-bottom: 1rem;
 }
 
-.date{
-    font-size: 60px;
+.time {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-size: 3rem;
+    font-weight: 600;
+    align-self: center;
+}
+
+.date {
+    font-size: 1.5rem;
+    align-self: center;
+}
+
+/* media queries */
+@media (max-width: 425px) {
+
+    .greeting {
+        font-size: 1.5rem;
+    }
+
+    .time {
+        font-size: 2.5rem;
+    }
+
+    .date {
+        font-size: 1rem;
+    }
+
 }
